Merge pull request #3
* K1J-1975: Add Spotless code formatter plugin and configuration

* K1J-1975: Apply Spotless code formatting

* K1J-1975: Remove obsolete test class

* K1J-1975: Enable Spotless check enforcement in build and CI